languages/montiarc-fe/src/test/resources/contextconditions/valid/BumpThroughPut.arc
package automaton.valid;

component BumpThroughPut {

  port
    in Integer i,
    out Integer o;

}